--- a/index.css
+++ b/index.css
@@ -6,13 +6,20 @@
   text-decoration: none;
   list-style: none;
 }
+body::-webkit-scrollbar {
+  overflow: hidden;
+  width: 0;
+  height: 0;
+}
 
 /* font-family: 'Kalam', cursive;
 font-family: 'Poppins', sans-serif; */
 
 :root {
-  --h2-font: 5rem;
-  --p-font: 2rem;
+  --h1-font: 2.8rem;
+  --h2-font: 1.6rem;
+  --h3-font: 1.2rem;
+  --p-font: 1rem;
   --btn-font: 0.9rem;
   --main-color: #001233;
   --main-opt-color: #003566;
@@ -21,12 +28,26 @@ font-family: 'Poppins', sans-serif; */
   --opt-color: #ffc300;
 }
 
+h1 {
+  font-size: var(--h1-font);
+  font-family: "Kalam", cursive;
+  color: var(--text-color);
+}
+
 h2 {
+  font-size: var(--h2-font);
+  font-family: "Kalam", cursive;
+  color: var(--text-color);
+}
+
+h3 {
+  font-size: var(--h3-font);
   font-family: "Kalam", cursive;
   color: var(--text-color);
 }
 
 p {
+  font-size: var(--p-font);
   font-family: "Kalam", cursive;
   color: #ffff;
 }
@@ -160,4 +181,67 @@ body {
   .menu li a:hover::after {
     width: 12%;
   }
+}
+
+/* -----banner---- */
+
+section {
+  padding: 70px 15% 80px;
+}
+
+#banner {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+  column-gap: 80px;
+  justify-content: center;
+  margin: auto;
+}
+
+.banner_content h1 {
+  font-size: 4rem;
+  line-height: 5rem;
+}
+
+.banner_content p {
+  font-size: 18px;
+  margin: 18px 30px 18px 0;
+}
+
+.banner_btn {
+  margin: 15px 0;
+}
+
+.banner_btn .btn {
+  margin-right: 10px;
+}
+
+.banner_img {
+  overflow: hidden;
+  box-shadow: 0px 10px 10px 0px rgba(0, 2, 7, 0.3);
+}
+
+.glowing_circle {
+  position: absolute;
+  top: -10rem;
+  left: -15rem;
+  z-index: -1;
+  width: 500px;
+  height: 500px;
+  background: radial-gradient(blue, black);
+  filter: brightness(10%);
+  filter: blur(90px);
+  border-radius: 100%;
+}
+
+.glowing_circle_1 {
+  position: absolute;
+  bottom: -5rem;
+  right: -20rem;
+  z-index: -1;
+  width: 500px;
+  height: 500px;
+  background: radial-gradient(blue, black);
+  filter: brightness(10%);
+  filter: blur(90px);
+  border-radius: 100%;
 }
