--- a/index.css
+++ b/index.css
@@ -186,7 +186,7 @@ body {
 /* -----banner---- */
 
 section {
-  padding: 70px 15% 80px;
+  padding: 80px 15% 70px;
 }
 
 #banner {
@@ -217,7 +217,10 @@ section {
 
 .banner_img {
   overflow: hidden;
-  box-shadow: 0px 10px 10px 0px rgba(0, 2, 7, 0.3);
+}
+
+.banner_img img {
+  box-shadow: 0px 20px 30px 0px rgba(0, 2, 7, 0.3);
 }
 
 .glowing_circle {
@@ -244,4 +247,63 @@ section {
   filter: brightness(10%);
   filter: blur(90px);
   border-radius: 100%;
+}
+
+/* ------trusted companies---- */
+
+.trusted {
+  text-align: center;
+}
+
+.trusted_brands {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+  margin: 45px auto;
+}
+.trusted_brands i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 15px;
+}
+
+.fa-brands {
+  font-size: 2.5rem;
+  color: #ffff;
+}
+
+.fa-brands h3 {
+  color: white;
+}
+.trusted_brands span {
+  border-left: 2px dotted white;
+  height: 9vh;
+  opacity: 15%;
+}
+
+/* ----large device ---- */
+
+@media only screen and (max-width: 992px) {
+  :root {
+    --h1-font: 2.1rem;
+    --h2-font: 1.6rem;
+    --h3-font: 1.2rem;
+    --p-font: 1rem;
+    --btn-font: 0.9rem;
+    --main-color: #001233;
+    --main-opt-color: #003566;
+    --text-color: #ffecd1;
+    --btn-color: #0466c8;
+    --opt-color: #ffc300;
+  }
+
+  .trusted_brands i {
+    display: block;
+  }
+
+  .trusted_brands h3 {
+    margin: 10px 0;
+  }
 }
