--- a/index.css
+++ b/index.css
@@ -2,10 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   text-decoration: none;
   list-style: none;
 }
+
 body::-webkit-scrollbar {
   overflow: hidden;
   width: 0;
@@ -174,6 +175,7 @@ body {
     padding: 7px;
     align-items: center;
   }
+
   .menu li a {
     margin: 7px;
   }
@@ -262,6 +264,7 @@ section {
   justify-content: space-between;
   margin: 45px auto;
 }
+
 .trusted_brands i {
   display: flex;
   align-items: center;
@@ -277,6 +280,7 @@ section {
 .fa-brands h3 {
   color: white;
 }
+
 .trusted_brands span {
   border-left: 2px dotted white;
   height: 9vh;
@@ -375,6 +379,7 @@ section {
   column-gap: 40px;
   row-gap: 40px;
 }
+
 .card_item {
   display: flex;
   flex-direction: column;
@@ -426,4 +431,52 @@ section {
       rgba(0, 17, 255, 0.4)
     );
   }
+}
+
+/* ----crypto_world----- */
+
+.crypto_world_img {
+  overflow: hidden;
+  position: relative;
+  height: 300px;
+  width: 100%;
+  background: linear-gradient(to top, var(--main-color), rgba(4, 27, 100, 0.9)),
+    url(//unsplash.it/200/200) center;
+  background-size: cover;
+}
+
+.crypto_world_content {
+  text-align: center;
+  position: absolute;
+  bottom: -100%;
+  margin: auto 45px;
+  transition: all 0.3s ease-out;
+  cursor: progress;
+}
+
+.crypto_world_content p {
+  margin: 2px 0;
+}
+
+.crypto_world_list {
+  display: flex;
+  justify-content: center;
+  column-gap: 30px;
+}
+
+.crypto_world_points {
+  display: flex;
+  align-items: center;
+  column-gap: 12px;
+  justify-content: center;
+  margin: 10px 0;
+  background: var(--main-color);
+  border-radius: 50px;
+  width: max-content;
+  padding: 5px 15px;
+}
+
+
+.crypto_world_img:hover >  .crypto_world_content{
+bottom: 80px;
 }
