added testimonial section

--- a/index.css
+++ b/index.css
@@ -7,10 +7,8 @@
   list-style: none;
 }
 
-body::-webkit-scrollbar {
-  overflow: hidden;
-  width: 0;
-  height: 0;
+body {
+  overflow-x: hidden;
 }
 
 /* font-family: 'Kalam', cursive;
@@ -530,12 +528,80 @@ section {
 }
 
 
+/* -----large - device --- */
+
+@media only screen and (max-width:992px) {
+  :root {
+    --h1-font: 2.8rem;
+    --h2-font: 1.6rem;
+    --h3-font: 1.2rem;
+    --p-font: 1rem;
+    --btn-font: 0.9rem;
+    --main-color: #001233;
+    --main-opt-color: #003566;
+    --text-color: #ffecd1;
+    --btn-color: #0466c8;
+    --opt-color: #ffc300;
+    --opt-color-2: #14213d;
+  }
+
+
+
+  .crypto_world_content h2 {
+    position: absolute;
+    display: flex;
+    left: 35px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    bottom: 120px;
+  }
+
+  .crypto_world_content {
+    display: grid;
+    width: 100%;
+  }
+
+  .crypto_world_content .crypto_world_desc {
+    position: absolute;
+    text-align: center;
+    width: 90%;
+    left: 0;
+    bottom: 60px;
+    /* color: rebeccapurple; */
+    /* width: 100%; */
+  }
+
+
+}
+
+.crypto_world_points {
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: nowrap; */
+  width: 100%;
+  align-items: center;
+  column-gap: 12px;
+  justify-content: center;
+  margin: 10px 0;
+  background: var(--main-color);
+  border-radius: 50px;
+  width: max-content;
+  font-size: 10px;
+  /* padding: 5px 15px; */
+}
+
+
 /* ------wallet_steps----- */
 
 .wallet_steps {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+  grid-template-columns: repeat(auto-fit, minmax(200px, auto));
   column-gap: 80px;
+}
+
+.wallet_steps_img {
+  overflow: hidden;
 }
 
 .wallet_steps_content p {
@@ -545,8 +611,6 @@ section {
 .wallet_steps_content h1 {
   line-height: 60px;
 }
-
-
 
 .accordin_title {
   background: linear-gradient(150deg, var(--main-opt-color), var(--opt-color-2));
@@ -604,4 +668,101 @@ section {
   right: 15px;
   top: 15px;
   display: none;
+}
+
+
+/* ---large - device--- */
+@media only screen and (max-width:992px) {
+  .wallet_steps_content h1 {
+    line-height: 35px;
+  }
+}
+
+/* ----medium - device---- */
+@media only screen and (max-width:768px) {
+
+  .wallet_steps {
+    text-align: center;
+    row-gap: 25px;
+  }
+
+  .wallet_steps_img {
+    width: 100%;
+  }
+
+  .wallet_steps_img img {
+    width: 100%;
+  }
+
+  .wallet_steps_content p {
+    margin-bottom: 25px;
+  }
+
+}
+
+
+/* ---testimonial---- */
+
+.testimonial h1,
+h3 {
+  text-align: center;
+  justify-content: center;
+}
+
+.card {
+  margin-top: 80px;
+  width: 100%;
+}
+
+.card_container {
+  margin: 0 50px;
+  overflow: hidden;
+
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  position: absolute;
+}
+
+.swiper-button-next {
+  right: 0;
+}
+
+.swiper-button-prev {
+  left: 0;
+}
+
+.card_wrapper {
+  padding: 30px;
+  width: auto;
+  background: linear-gradient(30deg, var(--main-color), var(--main-opt-color));
+  text-align: center;
+
+
+}
+
+.card_wrapper .stars {
+  margin-bottom: 20px;
+}
+
+
+.card_wrapper hr {
+  margin-top: 20px;
+  opacity: 10%;
+}
+
+.card_content {
+  display: flex;
+  column-gap: 40px;
+  margin: 20px 0 0 0;
+  align-items: center;
+
+}
+
+.card_profile img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+
 }
