--- a/index.css
+++ b/index.css
@@ -846,3 +846,68 @@ h3 {
     font-size: 13px;
   } */
 }
+
+/* ------subscribe----- */
+.subscribe_img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.subscribe_shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(180deg, hsl(219, 100%, 10%)10%,
+      hsla(0, 0%, 0%, 0)60%,
+      hsla(0, 0%, 0%, 0)60%,
+      hsl(219, 100%, 10%) 100%);
+}
+
+.subscribe_title {
+  position: absolute;
+  text-align: center;
+  top: 210px;
+  left: 450px;
+}
+
+.subscribe_title h1 {
+  line-height: 50px;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.6);
+}
+
+.subscribe_title p {
+  margin: 15px 0;
+}
+
+.subscribe_input {
+  position: absolute;
+  top: 410px;
+  left: 500px;
+}
+
+.subscribe_input input {
+  padding: 18px;
+  width: 400px;
+  border: 0.3px solid rgba(255, 255, 255, 0.1);
+  background: #ffff;
+  border-radius: 3px;
+  outline: none;
+}
+
+.subscribe_input input::placeholder {
+  color: var(--main-color);
+}
+
+
+.subscribe_input .sub_btn {
+  padding: 11px;
+  background: var(--main-color);
+  color: var(--text-color);
+  border: 0.3px solid rgba(255, 255, 255, 0.1);
+  margin-left: 4px;
+  border-radius: 3px;
+
+}
